# C99-Modern-Methods

./: Arr_Test.c  Array_Dims_IO_int.c  Array_Dims_Print.c  CHN_Tax_Table.c  CMakeLists.txt  EAN-12.c  ISBN-10.c  ISBN-13.c  ISBN_num.c  Test.md  VLA.c  addfrac.c  addfrac_plus.c  air_message.c  arr_1.c  arr_2.c  arr_3.c  arr_4.c  arr_5.c  arr_6.c  arr_7.c  arr_max_len.c  arr_sizeof.c  assignment.c  at_char.c  at_char_point.c  average.c  bit_num.c  broker.c  broker_.c  broker_plus.c  c89_bool.c  c99_bool.c  c99_for.c  calc_point.c  calendar.c  celsius.c  char_get_put.c  chars_1.c  check.c  (+127 more)
