cmake_minimum_required(VERSION 3.24)
project(Bate C)

set(CMAKE_C_STANDARD 99)

add_executable(Bate main.c)

add_executable(pun pun.c)
add_executable(assignment assignment.c)
add_executable(dweight dweight.c)
add_executable(initializer dweight2.c)
add_executable(dweight3 dweight3.c)
add_executable(celsius celsius.c)
add_executable(fahrenheit fahrenheit.c)
add_executable(print print.c)
add_executable(volumne volumne.c)
add_executable(doller dollar.c)
add_executable(polynmial polynmial.c)
add_executable(doller-tips dollar-tips.c)
add_executable(frac frac3.c)
add_executable(frac4 frac4.c)
add_executable(loan_payment loan_payment.c)
add_executable(conversion_specification conversion_specification.c)
add_executable(tprintf tprintf.c)
add_executable(escape_sequence escape_sequence.c)
add_executable(addfrac addfrac.c)
add_executable(year_month_day year_month_day.c)
add_executable(tymd tymd.c)
add_executable(ISBN_num ISBN_num.c)
add_executable(addfrac_plus addfrac_plus.c)
add_executable(phone_num phone_num.c)
add_executable(matrix matrix.c)
add_executable(upc upc.c)
add_executable(ISBN-13 ISBN-13.c)
add_executable(ISBN-10 ISBN-10.c)
add_executable(num_print num_print.c)
add_executable(sort_num sort_num.c)
add_executable(sort_num3 sort_num3.c)
add_executable(sort_num3_plus sort_num3_plus.c)
add_executable(eight_bit eight_bit.c)
add_executable(upc_plus upc_plus.c)
add_executable(upc-12 EAN-12.c)
add_executable(broker broker.c)
add_executable(c99_bool c99_bool.c)
add_executable(c89_bool c89_bool.c)
add_executable(switch switch.c)
add_executable(switch_num switch_num.c)
add_executable(date date.c)
add_executable(equ_3 equ_3.c)
add_executable(equ_num equ_num.c)
add_executable(switch_area_code switch_area_code.c)
add_executable(bit_num bit_num.c)
add_executable(time_24_12 time_24_12.c)
add_executable(time_24_12_plus time_24_12_plus.c)
add_executable(two_num_eng two_num_eng.c)
add_executable(broker_plus broker_plus.c)
add_executable(wind_scale wind_scale.c)
add_executable(tax_dollar tax_dollar.c)
add_executable(CHN_Tax_Table CHN_Tax_Table.c)
add_executable(upc_plus_ upc_plus_.c)
add_executable(max_min_4 max_min_4.c)
add_executable(grade_ grade_.c)
add_executable(grade_plus grade_plus.c)
add_executable(air_message air_message.c)
add_executable(date_early date_early.c)
add_executable(minus minus.c)
add_executable(square square.c)
add_executable(sum sum.c)
add_executable(minus_do minus_do.c)
add_executable(numdigit numdigit.c)
add_executable(minus_for minus_for.c)
add_executable(c99_for c99_for.c)
add_executable(square2 square2.c)
add_executable(square_3 square_3.c)
add_executable(prime prime.c)
add_executable(for_0 for_0.c)
add_executable(continue_ continue_.c)
add_executable(goto_ goto_.c)
add_executable(checking checking.c)
add_executable(prime_plus prime_plus.c)
add_executable(while_pow while_pow.c)
add_executable(seq seq.c)
add_executable(for_two for_two.c)
add_executable(sum2 sum2.c)
add_executable(c99_complex char_get_put.c)
add_executable(length length.c)
add_executable(length2 length2.c)
add_executable(integer_promotion integer_promotion.c)
add_executable(integer_promotion2 integer_promotion2.c)
add_executable(square3 square3.c)
add_executable(game game.c)
add_executable(sizeof_ sizeof_.c)
add_executable(broker_ broker_.c)
add_executable(square_ square_.c)
add_executable(calendar calendar.c)
add_executable(arr_1 arr_1.c)
add_executable(reverse reverse.c)
add_executable(arr_2 arr_2.c)
add_executable(repdigit repdigit.c)
add_executable(arr_sizeof arr_sizeof.c)
add_executable(interest interest.c)
add_executable(arr2_1 Array_Dims_Print.c)
add_executable(reverse2 reverse2.c)
add_executable(VLA VLA.c)
add_executable(deal deal.c)
add_executable(arr_3 arr_3.c)
add_executable(arr_4 arr_4.c)
add_executable(arr_5 arr_5.c)
add_executable(arr_6 arr_6.c)
add_executable(qsort qsort.c)
add_executable(data_ring data_ring.c)
add_executable(countdown countdown.c)
add_executable(power power_int.c)
add_executable(average average.c)
add_executable(pun2 pun2.c)
add_executable(void_fun void_fun.c)
add_executable(prime_2 prime_2.c)
add_executable(split split.c)
add_executable(powerd power_double.c)
add_executable(sum_array sum_array_int.c)
add_executable(sum_array_double sum_array_double.c)
add_executable(Array_Dims_IO_int Array_Dims_IO_int.c)
add_executable(sum_array_int_plus sum_array_int_plus.c)
add_executable(arr_7 arr_7.c)
add_executable(recursive_factorial recursive_factorial.c)
add_executable(recursive_power recursive_power.c)
add_executable(qsort_plus qsort_plus.c)
add_executable(check check.c)
add_executable(gcd gcd.c)
add_executable(gcd_2 gcd_2.c)
add_executable(day_of_year day_of_year.c)
add_executable(digit digit.c)
add_executable(num_digits num_digits.c)
add_executable(arr_max_len arr_max_len.c)
add_executable(pb pb.c)
add_executable(fact_2 fact_2.c)
add_executable(pb_plus pb_plus.c)
add_executable(guess guess.c)
add_executable(guess_plus guess_plus.c)
add_executable(Arr_Test Arr_Test.c)
add_executable(poker poker.c)
add_executable(poker_plus poker_plus.c)
add_executable(point point.c)
add_executable(point_1 point_1.c)
add_executable(point_2 point_2.c)
add_executable(point_3 point_3.c)
add_executable(point_scanf point_scanf.c)
add_executable(point_array point_array.c)
add_executable(point_array_plus point_array_plus.c)
add_executable(const_point const_point.c)
add_executable(split_date_point split_date_point.c)
add_executable(find_two_largest find_two_largest.c)
add_executable(swap swap.c)
add_executable(pay_amount pay_amount.c)
add_executable(calc_point calc_point.c)
add_executable(point_sum point_sum.c)
add_executable(point_sum_plus point_sum_plus.c)
add_executable(point_array01 point_array01.c)
add_executable(point_sum_plus2 point_sum_plus2.c)
add_executable(reverse3 reverse3.c)
add_executable(day_of_year_diff day_of_year_diff.c)
add_executable(chars_1 chars_1.c)
add_executable(gets_chars gets_chars.c)
add_executable(get_char_fun get_char_fun.c)
add_executable(at_char at_char.c)
add_executable(at_char_point at_char_point.c)
add_executable(str_fun str_fun.c)
add_executable(remind remind.c)
add_executable(planet planet.c)
add_executable(str_replace str_replace.c)
add_executable(incl incl.c)